--- a/test/fixtures/recruiters.yml
+++ b/test/fixtures/recruiters.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  email: MyString
+  name: 
+  email: 
   password: MyString
 
 two:
-  name: MyString
-  email: MyString
+  name: 
+  email: 
   password: MyString
