Adder Devise User models for jobseeker and recruiter, signout/edit/destroy for 1 particular user, companyID in recruiter as foreign key

--- a/test/fixtures/job_seekers.yml
+++ b/test/fixtures/job_seekers.yml
@@ -1,13 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  fullName: 
-  email: 
-  password: 
-  phone: MyString
+  name: MyString
+  phone: 1
 
 two:
-  fullName: 
-  email: 
-  password: 
-  phone: MyString
+  name: MyString
+  phone: 1
