Modified Home Page of the application

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,5 @@
 
 # Ignoring .idea files
 .idea/workspace.xml
-.idea/Recruiting and Applicant Tracking System.iml
+.idea/Recruiting and Applicant Tracking System.iml  
+.idea/Applicant-Tracking-System-.iml
